# roboai-python-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: create_deploy_bot.md  manage_roboai_account.md
robo_bot_cli/: __init__.py  __main__.py  main.py
robo_bot_cli/commands/: __init__.py  clean.py  connect.py  deploy.py  diff.py  environment.py  interactive.py  login.py  logout.py  logs.py  package.py  remove.py  run.py  seed.py  shell.py  start.py  status.py  stop.py  stories.py  test.py  train.py
robo_bot_cli/config/: bot_manifest.py  environment_constants.py  environment_settings.py  tool_settings.py
robo_bot_cli/config/store/: __init__.py  utils.py
robo_bot_cli/initial_structure/: resources_path.py
robo_bot_cli/initial_structure/initial_project/: credentials.yml
robo_bot_cli/initial_structure/initial_project/actions/: action.py  action_parlai_fallback.py
robo_bot_cli/initial_structure/initial_project/languages/: stories.md
robo_bot_cli/util/: cli.py  helpers.py  input_output.py  robo.py  text.py
roboai_cli/: __init__.py  __main__.py  main.py
roboai_cli/commands/: __init__.py  check_tests.py  clean.py  connect.py  create_tests.py  data.py  deploy.py  diff.py  environment.py  login.py  logout.py  logs.py  package.py  remove.py  report_logs.py  run.py  seed.py  shell.py  start.py  status.py  stop.py  stories.py  test.py  train.py
roboai_cli/config/: bot_manifest.py  environment_constants.py  environment_settings.py  tool_settings.py
roboai_cli/config/store/: utils.py
roboai_cli/initial_structure/initial_project/: endpoints.yml
roboai_cli/initial_structure/initial_project/actions/: action_parlai_fallback.py
roboai_cli/initial_structure/initial_project/languages/: stories.yml
roboai_cli/initial_structure/language/: config-dev.yml  domain.yml
roboai_cli/initial_structure/language/data/: nlu.md
roboai_cli/roboai_tests/tests_results/01042022-155321/: report.html
roboai_cli/roboai_tests/tests_results/01042022-160031/: report.html
roboai_cli/roboai_tests/tests_results/01042022-160257/: report.html
roboai_cli/roboai_tests/tests_results/01042022-160614/: report.html
roboai_cli/roboai_tests/tests_results/05052022-175617/: report.html
roboai_cli/roboai_tests/tests_results/05052022-175617/assets/: style.css
roboai_cli/roboai_tests/tests_results/06052022-145250/: fingerprint.json  report.html
roboai_cli/roboai_tests/tests_results/08042022-145359/: report.html
roboai_cli/roboai_tests/tests_results/08042022-150927/assets/: style.css
roboai_cli/roboai_tests/tests_results/08042022-151007/: report.html
roboai_cli/roboai_tests/tests_results/08042022-151138/: report.html
roboai_cli/roboai_tests/tests_results/08042022-152432/: report.html
roboai_cli/roboai_tests/tests_results/08042022-152858/: report.html
roboai_cli/roboai_tests/tests_results/19052022-095204/: fingerprint.json
roboai_cli/roboai_tests/tests_results/19052022-095514/: report.html
roboai_cli/roboai_tests/tests_results/19052022-095514/assets/: style.css
roboai_cli/roboai_tests/tests_results/19052022-095640/: report.html
roboai_cli/roboai_tests/tests_results/19052022-095843/: report.html
roboai_cli/roboai_tests/tests_results/19052022-155716/: report.html
roboai_cli/roboai_tests/tests_results/19052022-155716/assets/: style.css
roboai_cli/roboai_tests/tests_results/19052022-173257/: fingerprint.json  report.html
roboai_cli/roboai_tests/tests_results/19052022-173257/assets/: style.css
roboai_cli/roboai_tests/tests_results/19052022-174227/: report.html
roboai_cli/roboai_tests/tests_results/19052022-174306/: report.html
roboai_cli/roboai_tests/tests_results/21042022-174442/: report.html
roboai_cli/roboai_tests/tests_results/22042022-093451/: report.html
roboai_cli/roboai_tests/tests_results/22042022-094004/: report.html
roboai_cli/roboai_tests/tests_results/22042022-094310/: report.html
roboai_cli/roboai_tests/tests_results/22042022-094945/: report.html
roboai_cli/roboai_tests/tests_results/28042022-112452/: report.html
roboai_cli/roboai_tests/tests_results/28042022-112643/: report.html
roboai_cli/roboai_tests/tests_results/28042022-113018/: report.html
roboai_cli/roboai_tests/tests_results/28042022-113235/: report.html
roboai_cli/roboai_tests/tests_results/28042022-113441/: report.html
roboai_cli/roboai_tests/tests_results/28042022-115701/: report.html
roboai_cli/roboai_tests/tests_results/28042022-122036/: report.html
roboai_cli/roboai_tests/tests_results/28042022-122036/assets/: style.css
roboai_cli/roboai_tests/tests_results/28042022-122119/: report.html
roboai_cli/roboai_tests/tests_results/28042022-122220/: report.html
roboai_cli/roboai_tests/tests_results/28042022-122734/: report.html
roboai_cli/roboai_tests/tests_results/28042022-122852/: report.html
roboai_cli/roboai_tests/tests_results/28042022-123112/: report.html
roboai_cli/roboai_tests/tests_results/28042022-123411/: report.html
roboai_cli/roboai_tests/tests_results/28042022-123619/: report.html
roboai_cli/roboai_tests/tests_results/29042022-095618/: report.html
roboai_cli/roboai_tests/tests_results/29042022-182023/: report.html
roboai_cli/roboai_tests/tests_results/29042022-182023/assets/: style.css
roboai_cli/roboai_tests/tests_templates/: template_form_iptv_support.yml
roboai_cli/roboai_tests/tests_true_files/: template_form_iptv_support_0_true_file.yml  template_form_iptv_support_true_file.yml
roboai_cli/util/: __init__.py  automate.py  cli.py  domain.yml  fingerprint.json  helpers.py  input_output.py  parsing.py  report_draft.html  report_helper.py  request_reply.py  robo.py  template_form_iptv_support copy.yml  test_form_iptv_support.yml  true_file.json  true_file.yml
roboai_cli/util/assets/: style.css
tests/: conftest.py  test_clean.py  test_environment.py  test_login.py  test_logout.py  test_logs.py  test_package.py  test_seed.py
(+6 files in other folders)
