[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "roboai_cli"
version = "1.1.1"
description = "A command line tool to create, manage and deploy Rasa chatbots on the Robo.AI platform."
authors = ["ROBO.AI <info@robo-ai.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
keywords = ["rasa chatbot manager"]
readme = "README.md"
license = "MIT"
homepage = "https://robo-ai.com/"
repository = "https://github.com/robo-ai/roboai-python-cli"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
attrs = "19.3.0"
cattrs = "1.0.0"
certifi = "2020.4.5.1"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.3"
cursor = "1.3.4"
halo = "0.0.29"
idna = "2.9"
log-symbols = "0.0.14"
polling = "0.3.1"
pyfiglet = "0.8.post1"
Pygments = "2.6.1"
questionary = "1.5.2"
regex = "2020.5.14"
requests = "2.23.0"
six = "1.14.0"
spinners = "0.0.24"
termcolor = "1.1.0"
urllib3 = "1.25.9"
wcwidth = "0.1.9"
rasa = "1.10.0"
openpyxl = "3.0.4"
pandas = "1.0.5"
pytablewriter = "0.57.0"
XlsxWriter = "1.3.7"
robo_ai = "^0.1.1"

[tool.poetry.scripts]
roboai = "roboai_cli:run"



[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
