[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "roboai_cli"
version = "2.0.0"
description = "A command line tool to create, manage and deploy Rasa chatbots on the Robo.AI platform."
authors = ["ROBO.AI <info@robo-ai.com>"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
keywords = ["rasa chatbot manager"]
readme = "README.md"
license = "MIT"
homepage = "https://robo-ai.com/"
repository = "https://github.com/robo-ai/roboai-python-cli"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
attrs = "20.3.0"
cattrs = "1.0.0"
certifi = "2020.12.5"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.4"
cursor = "1.3.4"
halo = "0.0.29"
idna = "2.10"
log-symbols = "0.0.14"
polling = "0.3.1"
pyfiglet = "0.8.post1"
Pygments = "2.6.1"
questionary = "1.9.0"
regex = "2020.9.27"
requests = "2.25.1"
six = "1.15.0"
spinners = "0.0.24"
termcolor = "1.1.0"
urllib3 = "1.26.4"
wcwidth = "0.2.5"
openpyxl = "3.0.4"
pandas = "1.0.5"
pytablewriter = "0.57.0"
XlsxWriter = "1.3.7"
robo_ai = "^0.1.1"
PyYAML= "5.4.1"
absl-py = "0.12.0"
aio-pika = "6.8.0"
aiofiles = "0.6.0"
aiohttp = "3.6.3"
aiormq = "3.3.1"
APScheduler = "3.7.0"
astunparse = "1.6.3"
async_generator = "1.10"
async-timeout = "3.0.1"
bidict = "0.21.2"
boto3 = "1.17.49"
botocore = "1.20.49"
cachetools = "4.2.1"
cffi = "1.14.5"
cloudpickle = "1.6.0"
colorclass = "2.2.0"
coloredlogs = "14.3"
colorhash = "1.0.3"
cryptography = "3.4.7"
Cycler = "0.10.0"
decorator = "4.4.2"
dm-tree = "0.1.5"
dnspython = "1.16.0"
docopt = "0.6.2"
fbmessenger = "6.0.0"
future = "0.18.2"
gast = "0.3.3"
google-auth = "1.28.1"
google-auth-oauthlib = "0.4.4"
google-pasta = "0.2.0"
grpcio = "1.37.0"
h11 = "0.9.0"
h2 = "3.2.0"
h5py = "2.10.0"
hpack = "3.0.0"
hstspreload = "2020.12.22"
httplib2 = "0.19.1"
httptools = "0.1.1"
httpx = "0.11.1"
humanfriendly = "9.1"
hyperframe = "5.2.0"
importlib-metadata = "4.4.0"
ipaddress = "1.0.23"
jmespath = "0.10.0"
joblib = "0.15.1"
jsonpickle = "2.0.0"
jsonschema = "3.2.0"
kafka-python = "2.0.2"
Keras-Preprocessing = "1.1.2"
kiwisolver = "1.3.1"
Markdown = "3.3.4"
matplotlib = "3.3.4"
mattermostwrapper = "2.2"
multidict = "4.7.6"
networkx = "2.5.1"
numpy = "1.18.5"
oauth2client = "4.1.3"
oauthlib = "3.1.0"
opt-einsum = "3.3.0"
packaging = "20.9"
pamqp = "2.3.0"
Pillow = "8.2.0"
prompt-toolkit = "2.0.10"
protobuf = "3.15.8"
psycopg2-binary = "2.8.6"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydot = "1.4.2"
PyJWT = "2.0.1"
pykwalify = "1.8.0"
pymongo = "3.10.1"
pyparsing = "2.4.7"
pyrsistent = "0.17.3"
pyTelegramBotAPI = "3.7.7"
python-crfsuite = "0.9.7"
python-dateutil = "2.8.1"
python-engineio = "4.0.1"
python-socketio = "5.1.0"
pytz = "2020.5"
rasa = "2.5.0"
rasa-sdk = "2.5.0"
redis = "3.5.3"
requests-oauthlib = "1.3.0"
requests-toolbelt = "0.9.1"
rfc3986 = "1.4.0"
rocketchat-API = "1.15.0"
rsa = "4.7.2"
"ruamel.yaml" = "0.16.13"
"ruamel.yaml.clib" = "0.2.2"
s3transfer = "0.3.6"
sanic = "20.3.0"
Sanic-Cors = "0.10.0.post3"
sanic-jwt = "1.5.0"
Sanic-Plugins-Framework = "0.9.5"
scikit-learn = "0.24.1"
scipy = "1.5.4"
sentry-sdk = "0.19.5"
sklearn-crfsuite = "0.3.6"
slackclient = "2.9.3"
sniffio = "1.2.0"
SQLAlchemy = "1.3.24"
tabulate = "0.8.9"
tensorboard = "2.4.1"
tensorboard-plugin-wit = "1.8.0"
tensorflow = "2.3.2"
tensorflow-addons = "0.12.0"
tensorflow-estimator = "2.3.0"
tensorflow-hub = "0.10.0"
tensorflow-probability = "0.11.1"
terminaltables = "3.1.0"
threadpoolctl = "2.1.0"
tqdm = "4.59.0"
twilio = "6.50.1"
typeguard = "2.12.0"
typing-extensions = "3.7.4.3"
tzlocal = "2.1"
ujson = "4.0.2"
webexteamssdk = "1.6"
websockets = "8.0.2"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
yarl = "1.5.1"
zipp = "3.4.1"

[tool.poetry.scripts]
roboai = "roboai_cli:run"



[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
